@@ -40,6 +40,7 @@
 * Made it possible to manually set the Chunky settings directory via system
   properties (java -Dchunky.home=DIR).
 * Omni-Directional Stereo projector added (thanks leMaik!)
+* Vertical droppers and dispensers are now rendered correctly.
 
 1.3.8 - 2016-04-03
 
